@@ -2,6 +2,7 @@ INCLUDES =  \
     $(GNOME_CFLAGS) \
     -I$(top_builddir)/src
 
+
 EXTRA_DIST =  \
 	$(top_builddir)/src/gui/*.h 
 
